# phronedge-python

./: .gitignore  README.md  pyproject.toml  test_agent.py
docs/: api-reference.md  cli-reference.md  console-guide.md  multi-agent.md  quickstart.md  sdk-reference.md
docs/frameworks/: crewai.md  google-adk.md  langgraph.md  llamaindex.md  openai-agents.md
examples/: e2e_test.py
phronedge/: __init__.py  cli.py  client.py
