[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phronedge"
version = "2.5.0"
description = "Runtime AI Governance  - govern any AI agent tool call"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]
authors = [{name = "PhronEdge", email = "sdk@phronedge.com"}]
keywords = ["ai", "governance", "constitutional", "agent", "compliance", "gdpr", "eu-ai-act"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
phronedge = "phronedge.cli:main"

[project.urls]
Homepage = "https://phronedge.com"
Documentation = "https://phronedge.com"
Repository = "https://github.com/phronedge/phronedge-python"

[tool.setuptools.packages.find]
include = ["phronedge*"]
